@@ -1,6 +1,6 @@
 # encoding=utf-8
 # Generated by cpy
-# 2014-04-10 19:01:16.453619
+# 2014-05-03 23:56:55.847601
 import os, sys
 from sys import stdin, stdout
 
@@ -148,7 +148,7 @@ class SSDB(object):
 						i += 1
 				return SSDB_Response(resp[0], data)
 				break
-			if False or ((cmd) == 'scan') or ((cmd) == 'rscan') or ((cmd) == 'hscan') or ((cmd) == 'hrscan'):
+			if False or ((cmd) == 'scan') or ((cmd) == 'rscan') or ((cmd) == 'hgetall') or ((cmd) == 'hscan') or ((cmd) == 'hrscan'):
 				pass
 
 				if resp[0]=='ok':
